# maps

./: .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml
.github/workflows/: rust.yml
crates/maps/: Cargo.toml  README.md  index.html
crates/maps/data/dummy_maps/: dummy_map_lores.yaml
crates/maps/data/google_cartographer_example/: README.md  map_0.yaml  map_4.yaml  pose_0.yaml  pose_2.yaml  pose_3.yaml  pose_4.yaml  session.toml
crates/maps/data/google_cartographer_example/jpeg/: map_0.yaml
crates/maps/data/nav2_example/: depot.yaml  depot_keepout.yaml  map_pose_warehouse.yaml  session.toml  warehouse.yaml  warehouse_speed.yaml
crates/maps/src/: app.rs  error.rs  grid.rs  grid_options.rs  lens.rs  lib.rs  main_native.rs  map_state.rs  movable.rs  os_helpers.rs  persistence.rs  texture_request.rs  tiles.rs  tiles_behavior.rs  tracing.rs
crates/maps/src/app_impl/: canvas_settings.rs  central_panel.rs  constants.rs  debug_window.rs  file_dialog_builder.rs  footer_panel.rs  header_panel.rs  info_window.rs  keys.rs  load_delete.rs  menu_panel.rs  mod.rs  pose_edit.rs  quit_modal.rs  screenshot.rs  settings_panel.rs  tint_settings.rs  ui_helpers.rs
crates/maps/src/wasm/: async_consume.rs  async_data.rs  async_map_io.rs  async_pose_io.rs  demo.rs  mod.rs
crates/maps/tests/: empty_kittest.rs  fixed_lens_background_kittest.rs  google_cartographer_example_kittest.rs  nav2_example_kittest.rs  panels_visible_kittest.rs  value_colormap_kittest.rs  value_interpretation_kittest.rs
crates/maps/tests/kittest_common/: mod.rs
crates/maps/tests/maps/: dummy_map_raw.yaml  dummy_map_scale_negate.yaml  dummy_map_trinary.yaml  dummy_map_trinary_negate.yaml
crates/maps/tests/sessions/: custom_session.toml  value_interpretations_map_server.toml  value_interpretations_ros1_wiki.toml
crates/maps_io_ros/: Cargo.toml  README.md
crates/maps_io_ros/examples/: demo.rs
crates/maps_io_ros/src/: error.rs  image.rs  lib.rs  meta.rs  os_helpers.rs  value_colormap.rs
crates/maps_rendering/: Cargo.toml  README.md
crates/maps_rendering/src/: error.rs  image.rs  image_pyramid.rs  lib.rs  rect_helpers.rs  render_options.rs  texture_cache.rs  texture_request.rs  texture_state.rs
data/: dummy_map_rot.yaml  maps.desktop
data/dummy_maps/: dummy_map_hires.yaml  dummy_map_lores.yaml  dummy_map_midres.yaml  pixel_test.yaml
data/google_cartographer_example/: map_1.yaml  map_2.yaml  map_3.yaml  pose_1.yaml  session.toml
data/google_cartographer_example/jpeg/: README.md  map_1.yaml  map_2.yaml
data/maps_icon.icon/: icon.json
data/nav2_example/: README.md  depot_speed.yaml  map_pose_depot.yaml  session.toml  warehouse_keepout.yaml
maps_io_ros/: Cargo.toml  README.md
maps_io_ros/examples/: demo.rs
maps_io_ros/src/: map_pose.rs
src/: app.rs  draw_order.rs  error.rs  grid.rs  grid_options.rs  image.rs  image_pyramid.rs  lens.rs  lib.rs  main.rs  main_native.rs  main_wasm.rs  map_pose.rs  map_pose_ext.rs  map_state.rs  meta.rs  movable.rs  os_helpers.rs  path_helpers.rs  persistence.rs  rect_helpers.rs  render_options.rs  texture_cache.rs  texture_request.rs  texture_state.rs  tiles.rs  tiles_behavior.rs  tracing.rs  value_colormap.rs  value_interpretation.rs
src/app_impl/: app_settings.rs  canvas_settings.rs  central_panel.rs  compat.rs  constants.rs  debug_window.rs  error_modal.rs  file_dialog_builder.rs  footer_panel.rs  grid_settings.rs  header_panel.rs  info_window.rs  keys.rs  lens_settings.rs  load_delete.rs  menu_panel.rs  mod.rs  pose_edit.rs  quit_modal.rs  screenshot.rs  settings_panel.rs  tint_settings.rs  ui_helpers.rs
src/graph/: layout.rs  mod.rs  vda_lif.rs
src/wasm/: async_consume.rs  async_data.rs  async_image_io.rs  async_map_io.rs  async_pose_io.rs  demo.rs  mod.rs
tests/: aligned_view_kittest.rs  dense_grid_precision_kittest.rs  empty_kittest.rs  fixed_lens_background_kittest.rs  fixed_lens_kittest.rs  google_cartographer_example_kittest.rs  invert_color_kittest.rs  measurement_kittest.rs  nav2_example_kittest.rs  pixel_kittest.rs  reload_session_config_kittest.rs  stacked_view_kittest.rs  tiles_view_kittest.rs  value_colormap_kittest.rs  value_interpretation_kittest.rs
tests/kittest_common/: mod.rs
tests/maps/: dummy_map_raw_negate.yaml  dummy_map_scale.yaml
tests/sessions/: custom_options.toml  custom_session.toml  value_interpretations_map_server.toml  value_interpretations_ros1_wiki.toml
tests/snapshots/map_server_rviz_references/: README.md
