[workspace]
members = ["crates/maps", "crates/maps_io_ros"]
# Build / test both crates also when calling cargo without --workspace.
default-members = ["crates/maps", "crates/maps_io_ros"]
resolver = "2"

[profile.kittest]
# kittests would be a bit too slow without optimizations.
inherits = "release"

# Shared dependencies across workspace members.
[workspace.dependencies]
# Use core lib from path for local development, and version when publishing.
maps_io_ros = { path = "crates/maps_io_ros", version = "0.1.0" }
image = { version = "0.25.5", features = ["jpeg", "png", "pnm"] }
imageproc = "0.25.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
thiserror = "2.0.16"

[profile.release]
opt-level = 2 # fast and small wasm
