[package]
name = "maps_io_ros"
description = "Fundamental IO for 2D ROS grid maps."
authors = ["Michael Grupp"]
license = "Apache-2.0"
repository = "https://github.com/MichaelGrupp/maps"
categories = ["science::robotics", "data-structures", "filesystem", "multimedia::images"]
keywords = ["map", "navigation", "SLAM", "ROS", "robotics"]
version = "0.1.2"
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"

[dependencies]
emath = { version = "0.33.0", features = ["serde"] }
image = { workspace = true }
imageproc = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
